build_output.log

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava FAILED
/home/az/project/BusinessCraft/common/src/main/java/com/quackers29/businesscraft/block/entity/TownInterfaceEntity.java:119: error: invalid method reference
            .addReadOnlyField("bread_count", this::getBreadCountFromTown, "Legacy bread count for compatibility")
                                             ^
  cannot find symbol
    symbol:   method getBreadCountFromTown()
    location: class TownInterfaceEntity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':common:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
1 actionable task: 1 executed
